
syntax = "proto3";

package echo;

service EchoService {
  // unary call
  rpc Echo(EchoRequest) returns (EchoReply);

  // server streaming call
  rpc EchoStream(EchoRequestStream) returns (stream EchoReply);
}

message EchoRequest {
  string a = 1;
  SubMessage1 b = 7;
  SubMessage2 c = 13;
}

message SubMessage1 {
  string a = 42;
}

message SubMessage2 {
  int64 a = 137;
}

message EchoRequestStream {
  EchoRequest payload = 1;
  int64 count = 2;
}

message EchoReply {
  EchoRequest request = 8;
}
